# backend

./: .env.example  LICENSE  README.md  docker-compose.yaml  pyproject.toml
backend-tramplin/: .gitignore  pyproject.toml
backend-tramplin/src/: main.py
backend-tramplin/src/api/: main_router.py  opportunity.py
backend-tramplin/src/core/: config.py  const.py  types.py
backend-tramplin/src/core/settings/: db_settings.py
backend-tramplin/src/database/: db.py
backend-tramplin/src/database/dto/: base.py  opportunity.py
backend-tramplin/src/database/models/: base.py  models.py
backend-tramplin/src/services/: base.py  opportunity.py
src/: main.py
src/api/: auth.py  favorites.py  main_router.py  opportunity.py  users.py
src/core/: config.py  const.py  types.py
src/database/: db.py
src/database/dto/: apllications.py  applicants.py  applications.py  auth.py  base.py  employer.py  favorites.py  favourites.py  opportunity.py  tags.py  user.py
src/database/models/: base.py  models.py
src/services/: admin.py  applicant.py  auth.py  base.py  employer.py  favorites.py  favourites.py  opportunity.py
src/utils/: funcs.py
