[project]
name = "backend-tramplin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtpd>=1.4.6",
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.135.1",
    "jwt>=1.4.0",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.19.1",
]
